# starlette-inertia

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_inertia/: __init__.py  inertia.py
starlette_inertia/: __init__.py  index.html.jinja2  inertia.py  routes.js.jinja2
tests/: test_inertia.py
