[tool.poetry]
name = "starlette-inertia"
version = "0.1.0"
description = "Use InertiaJS with FastAPI"
authors = ["Tony Lykke <tony@roganartu.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "*"

[tool.poetry.dev-dependencies]
black = "<21.12b0"
isort = "<5.10"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
