[tool.poetry]
name = "starlette-inertia"
version = "0.0.1"
description = "Use InertiaJS with FastAPI"
authors = ["Tony Lykke <tony@roganartu.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
starlette = "*"
Jinja2 = "*"

[tool.poetry.dev-dependencies]
black = "<21.12b0"
isort = "<5.10"
pyright = "^0.0.13"
pytest = "^6.2.5"
starlette = {extras = ["full"], version = "^0.17.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
