[tool.poetry]
name = "starlette-inertia"
version = "0.1.3"
description = "Use InertiaJS with Starlette apps"
authors = ["Tony Lykke <tony@roganartu.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
starlette = "*"
Jinja2 = "*"

[tool.poetry.dev-dependencies]
black = "<21.12b0"
isort = "<5.10"
pyright = "^0.0.13"
pytest = "^6.2.5"
starlette = {extras = ["full"], version = "^0.17.1"}
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
